# sage

./: .gitignore  README.md  loc.sh  meson.build  mingw32.ini
examples/demo/: items.json  project.json
examples/demo/characters/: blacksmith.json  cyclops.json  ghost.json  link.json  mage.json  player.json  spider.json
examples/demo/gui/: combat_button.json  combat_menu.json  end_game_screen.json  font.json  inventory.json  inventory_slot.json  losing_screen.json  main_menu.json  main_menu_button.json  map_transition.json  quest.json  quest_log.json  textbox.json
examples/demo/maps/: dungeon_1.tmj  dungeon_2.tmj  town.tmj
examples/demo/sequences/: chest.json  door.json  ghost.json  losing_screen.json  replenish_item.json  start.json
examples/demo/textures/: player.png~  tiny_dungeon.png-autosave.kra
examples/demo/tilesets/: Captain.tsj  Dungeon.tsj  General.tsj  Town.tsj
examples/sandbox/: font.json  project.json
examples/sandbox/characters/: enemy1.json
examples/sandbox/gui/: inventory.json  quest_log.json
examples/sandbox/tilesets/: Sprites_2.tsj
examples/test_chambers/: items.json  project.json
examples/test_chambers/characters/: player.json
examples/test_chambers/maps/: chamber_1.tmj  chamber_2.tmj  chamber_3.tmj  chamber_4.tmj  lobby.tmj
examples/test_chambers/sequences/: door.json  start.json
examples/test_chambers/tilesets/: Tiles_Passable.tsj  Tileset.tsj
sandbox/: combat_button.json  combat_menu.json  font.json  inventory_slot.json  items.json  main_menu.json  main_menu_button.json  project.json  quest.json  quest_log.json  textbox.json
sandbox/characters/: bagu.json  enemy1.json  error.json  link.json
sandbox/gui/: quest.json
sandbox/maps/: house.tmj  testmap0.tmj  testmap1.tmj
sandbox/sequences/: start.json
sandbox/sequences/house/: door.json  error_speech.json  trade.json
sandbox/sequences/testmap0/: cave_door.json  house_door.json  sign.json
sandbox/sequences/testmap1/: big_chest0.json  chest0.json  combat.json  (+4 more)
sandbox/tilesets/: Overworld.tsj  Sprites.tsj  Underworld.tsj
src/: ability.hpp  application.cpp  application.hpp  argument_parser.cpp  argument_parser.hpp  character_profile.hpp  combat.cpp  combat.hpp  combat_ai.cpp  combat_ai.hpp  combat_controller.cpp  combat_controller.hpp  console.cpp  console.hpp  game.cpp  game.hpp  game_facade.cpp  game_facade.hpp  game_logic.cpp  game_logic.hpp  input_event_provider.hpp  input_manager.cpp  input_manager.hpp  main.cpp  music_player.cpp  music_player.hpp  party.cpp  party.hpp  text_box.cpp  text_box.hpp  version.cpp  version.hpp
src/combat/: battle.cpp  battle.hpp  battle_desc.hpp  battle_turn.cpp  battle_turn.hpp  combat.cpp  combat.hpp  combat_ai.cpp  combat_ai.hpp  combat_controller.cpp  combat_controller.hpp  combat_observer.hpp  combat_unit.cpp  combat_unit.hpp  stances.cpp  stances.hpp  target_selection_type.hpp
src/dev_tools/: dev_tools.cpp  dev_tools.hpp  entity_detail.cpp  entity_detail.hpp  entity_list.cpp  entity_list.hpp  header.cpp  header.hpp  main_widget.cpp  main_widget.hpp  map_dialog.cpp  map_dialog.hpp  mode_entity.cpp  mode_entity.hpp  mode_general.cpp  mode_general.hpp  mode_items.cpp  mode_items.hpp  mode_sequence.cpp  mode_sequence.hpp  sequence_detail.cpp  sequence_detail.hpp  sequence_list.cpp  sequence_list.hpp
src/editor/: editor.cpp  editor.hpp  item_edit_dialog.cpp  item_edit_dialog.hpp  main_nav.cpp  main_nav.hpp  main_widget.cpp  main_widget.hpp  mode_general.cpp  mode_general.hpp  mode_gui.cpp  mode_gui.hpp  mode_gui_open_dialog.cpp  mode_gui_open_dialog.hpp  mode_items.cpp  mode_items.hpp
src/game/: game.cpp  game.hpp  game_facade.cpp  game_facade.hpp  game_logic.cpp  game_logic.hpp  game_logic_state_combat.cpp  game_logic_state_combat.hpp  game_logic_state_normal.cpp  game_logic_state_normal.hpp
src/graphics/: animated_sprite.cpp  animated_sprite.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  combat_renderer.cpp  combat_renderer.hpp  debug_entity_renderer.cpp  debug_entity_renderer.hpp  inventory_renderer.cpp  inventory_renderer.hpp  main_menu_renderer.cpp  main_menu_renderer.hpp  map_renderer.cpp  map_renderer.hpp  quest_log_renderer.cpp  quest_log_renderer.hpp  scriptable_gui.cpp  scriptable_gui.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  text_box_renderer.cpp  text_box_renderer.hpp  texture.hpp
src/input/: input_event.cpp  input_event.hpp  input_event_provider.hpp  user_input.cpp  user_input.hpp
src/io/: character_profile_loader.cpp  character_profile_loader.hpp  cjson_types.cpp  cjson_types.hpp  gui_loader.cpp  gui_loader.hpp  item_registry_loader.cpp  item_registry_loader.hpp  json_types.cpp  json_types.hpp  map_saveloader.cpp  map_saveloader.hpp  parameter_parser.cpp  parameter_parser.hpp  project_loader.cpp  project_loader.hpp  resource_manager.cpp  resource_manager.hpp  sequence_loader.cpp  sequence_loader.hpp  template.cpp  template.hpp  tmj.cpp  tmj.hpp  user_directory_provider.cpp  user_directory_provider.hpp
src/item/: inventory.cpp  inventory.hpp  item.hpp  item_registry.cpp  item_registry.hpp
src/map/: entity.cpp  entity.hpp  map.cpp  map.hpp  position.cpp  position.hpp  tile.hpp  tile_layer.cpp  tile_layer.hpp  tile_layers.cpp  tile_layers.hpp
src/quest/: quest.hpp  quest_log.cpp  quest_log.hpp
src/replay/: replay.cpp  replay.hpp  replay_player.cpp  replay_player.hpp  replay_recorder.cpp  replay_recorder.hpp
src/sequence/: condition.hpp  condition_factory.cpp  condition_factory.hpp  event.hpp  event_factory.cpp  event_factory.hpp  event_parameter.hpp  sequence.cpp  sequence.hpp  sequence_manager.cpp  sequence_manager.hpp
src/templating/: parameter.hpp  templated.cpp  templated.hpp
src/utils/: abs.hpp  array.hpp  colour.cpp  colour.hpp  concepts.hpp  direction.hpp  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  function_wrapper.hpp  fuzzy_match.cpp  fuzzy_match.hpp  json.cpp  json.hpp  log.cpp  log.hpp  minmax.hpp  move.hpp  optional.hpp  own_ptr.hpp  passkey.hpp  pool.hpp  pool_table.hpp  profiler.hpp  rect.hpp  string.cpp  string.hpp  table.hpp  vec2.hpp
(+518 files in other folders)
