project('sage', ['cpp', 'c'], default_options : ['cpp_std=c++2a', 'buildtype=debug', 'warning_level=3', 'werror=true'])

subdir('vendor')

src = [
  'src/application.cpp',
  'src/combat/combat.cpp',
  'src/combat/combat_ai.cpp',
  'src/combat/combat_controller.cpp',
  'src/dev_tools/dev_tools.cpp',
  'src/dev_tools/mode_entity.cpp',
  'src/dev_tools/mode_general.cpp',
  'src/dev_tools/mode_sequence.cpp',
  'src/game.cpp',
  'src/game_facade.cpp',
  'src/game_logic.cpp',
  'src/graphics/camera.cpp',
  'src/graphics/camera_controller.cpp',
  'src/graphics/combat_renderer.cpp',
  'src/graphics/inventory_renderer.cpp',
  'src/graphics/map_renderer.cpp',
  'src/graphics/quest_log_renderer.cpp',
  'src/graphics/sprite.cpp',
  'src/graphics/text_box_renderer.cpp',
  'src/graphics/ui/box.cpp',
  'src/graphics/ui/button.cpp',
  'src/graphics/ui/image.cpp',
  'src/graphics/ui/layout.cpp',
  'src/graphics/ui/size.cpp',
  'src/graphics/ui/text.cpp',
  'src/graphics/ui/widget.cpp',
  'src/io/character_profile_loader.cpp',
  'src/io/json_types.cpp',
  'src/io/gui_loader.cpp',
  'src/io/item_registry_loader.cpp',
  'src/io/project_loader.cpp',
  'src/io/resource/character_profile_manager.cpp',
  'src/io/resource/font_manager.cpp',
  'src/io/resource/map_manager.cpp',
  'src/io/resource/resource_system.cpp',
  'src/io/resource/sequence_manager.cpp',
  'src/io/resource/sound_manager.cpp',
  'src/io/resource/texture_manager.cpp',
  'src/io/savegame/game_saveloader.cpp',
  'src/io/savegame/inventory_saveloader.cpp',
  'src/io/savegame/quest_saveloader.cpp',
  'src/io/savegame/map_saveloader.cpp',
  'src/io/savegame/sequence_saveloader.cpp',
  'src/io/sequence_loader.cpp',
  'src/io/tmj.cpp',
  'src/item/inventory.cpp',
  'src/item/item_registry.cpp',
  'src/main.cpp',
  'src/map/entity.cpp',
  'src/map/map.cpp',
  'src/map/tile_layer.cpp',
  'src/map/tile_layers.cpp',
  'src/music_player.cpp',
  'src/party.cpp',
  'src/quest/quest_log.cpp',
  'src/sequence/conditions/has_item.cpp',
  'src/sequence/conditions/not.cpp',
  'src/sequence/events/activate_sequence.cpp',
  'src/sequence/events/add_quest.cpp',
  'src/sequence/events/add_to_party.cpp',
  'src/sequence/events/change_map.cpp',
  'src/sequence/events/change_sprite.cpp',
  'src/sequence/events/delay.cpp',
  'src/sequence/events/disable_player_actions.cpp',
  'src/sequence/events/display_text.cpp',
  'src/sequence/events/echo.cpp',
  'src/sequence/events/enable_player_actions.cpp',
  'src/sequence/events/enter_combat.cpp',
  'src/sequence/events/finish_quest.cpp',
  'src/sequence/events/give_item.cpp',
  'src/sequence/events/move_entity.cpp',
  'src/sequence/events/play_music.cpp',
  'src/sequence/events/play_sound.cpp',
  'src/sequence/events/remove_item.cpp',
  'src/sequence/events/rotate_entity.cpp',
  'src/sequence/events/teleport_entity.cpp',
  'src/sequence/events/teleport_player.cpp',
  'src/sequence/events/zoom_camera.cpp',
  'src/sequence/sequence.cpp',
  'src/text_box.cpp',
  'src/utils/file.cpp',
  'src/utils/filesystem.cpp',
  'src/utils/json.cpp',
  'src/utils/log.cpp',
  'src/utils/string.cpp',
]

deps = [
  raylib_lib,
]

# Custom options for Windows builds
executable_options = []

if host_machine.system() == 'windows'
  deps += meson.get_compiler('cpp').find_library('winmm')
  executable_options = ['werror=y=on']
endif

executable('out', src,
  dependencies : deps,
  include_directories : [vendor_inc, 'src'],
  override_options : executable_options,
  link_with : vendor_lib
)
